# ark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: add.h  ark.h  branch.h  cat-file.h  commit-tree.h  commit.h  compress.h  hash-object.h  head.h  index.h  init.h  log.h  objects.h  status.h  switch.h  update-ref.h  write-tree.h
src/: main.cpp
src/commands/: add.cpp  branch.cpp  cat-file.cpp  commit-tree.cpp  commit.cpp  hash-object.cpp  init.cpp  log.cpp  status.cpp  switch.cpp  update-ref.cpp  write-tree.cpp
src/utils/: ark.cpp  compress.cpp  head.cpp  index.cpp  objects.cpp
testing/: .gitignore
testing/include/: commit.h  compress.h  log.h  status.h  switch.h
testing/src/: main.cpp
testing/src/commands/: commit.cpp  log.cpp  switch.cpp
testing/src/utils/: objects.cpp
tests/: _assert.sh  _decompress.sh  _fake_editor.sh  _objecthash.sh  add_dot.sh  add_files_dirs.sh  commit_parent.sh  commit_single.sh  init.sh
